# sor_prototype

./: .gitignore  CMakeLists.txt  README.md  smart_order_router
data/: binance_order_book.csv  kucoin_order_book.csv  okx_order_book.csv
data/snap1/: binance_order_book.csv
data/snap2/: kucoin_order_book.csv  okx_order_book.csv
include/: executionplan.h  greedyorderdistribution.h  orderbook.h  orderdistributionstrategy.h  smartorderrouter.h  utils.h
src/: executionplan.cpp  greedyorderdistribution.cpp  main.cpp  orderbook.cpp  smartorderrouter.cpp  utils.cpp
tests/: CMakeLists.txt  test.cpp
tests/testdata/force_optimized/: binance_order_book.csv  kucoin_order_book.csv  okx_order_book.csv
